Changed Capital Letter H

--- a/E-Com.html
+++ b/E-Com.html
@@ -56,7 +56,7 @@
           <br>
           <h3><a href="first.html" target="_blank" style="color: aliceblue;">About Us</h3>
             <h3><a href="2nd.html" style="color: aliceblue;">More Info</a></h3>
-            <small><mark>HEllo</mark><del>Pro</del></small>
+            <small><mark>Hello</mark><del>Pro</del></small>
             </body>
             </html>
 
